[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pypush"
dynamic = ["version"]
dependencies = [
    "anyio",
    "httpx",
    "cryptography",
    'importlib_metadata; python_version>="3.8"',
]

[project.scripts]
apnsproxy = "pypush.cli.apnsproxy:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
proxy = [
    "frida",
]

[tool.setuptools_scm]
version_file = "pypush/_version.py"

[tool.black]
# Exclude pypush.apns.new.protocol.py from formatting
extend-exclude = "pypush/apns/new/protocol.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "-q"]
testpaths = ["tests"]